# FieldAC

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  DownloadProject.Template.cmake  DownloadProject.cmake  Makefile  README.md  Vision  build.sh  cmake_install.cmake  display.cpp  display.hpp  field  field.cpp  field.hpp  main.cpp  objects.cpp  objects.h  objects.hpp  ocr.py  pytesseract.py  remote.cpp  remote.hpp  socket.cpp  socket.hpp  tesserocr.py  vision.cpp  vision.h  vision.hpp
2018-Vision/: .project
2018-Vision/src/fieldModel/: Cube.java  Field.java  Obstacle.java  Robot.java
arapaho/: arapaho.cpp  arapaho.hpp  test.cpp
botlocale/: lidar.cpp  lidar.hpp  mcl.cpp  mcl.h  mcl.hpp  remote.cpp  remote.hpp
bottracking/: bottrack.cpp  bottrack.hpp  robottrack.cpp
darknet/: Makefile  darknet  detection_layer.h  network.cpp  network.hpp  nightmare.c  uselib  yolo_console_dll.cpp
darknet/darknet.so.dSYM/Contents/: Info.plist
darknet/libdarknet.so.dSYM/Contents/: Info.plist
darknet/uselib.dSYM/Contents/: Info.plist
darknet/uselib.dSYM/Contents/Resources/DWARF/: uselib
data/: .model-cube.weights.icloud  model-cube.cfg  yolo-cube.cfg
network/: network.cpp  network.hpp  target.cpp  target.hpp
objecttracking/: cubetrack.cpp  cubetrack.hpp  darknet_detector.h  extrapolate.cpp  extrapolate.h  extrapolate.hpp  sharedqueue.hpp
ot/: cubetrack.cpp
python-vision/: AutocalibrateRunner.py  ContourFinding.py  GripRunner.py  NetworkTabling.py  Printing.py  README.md  SpikeFinding.py  TestImageMain.py  WebCam.py  WebCamMain.py  _gitignore  _travis.yml  autocalibrate.py  config.py  functionFitting.nb  grip.py  grip_edited.py  label_cubes.py  launcher.sh  main.py  main_profiled.py  nohup.out  pipeline.grip  pixelXs.csv  pixelYs.csv  pixel_to_degrees.py  pxCoords.csv  test.py  testPhoto.py  thetaXs.csv  thetaYs.csv  thetas.csv  thetas2.csv  thetasY.csv  undistort.py  undistort_angles.py
rl/: mcl.cpp
scripts/: install_cmake-3.9.sh  install_opencv-3.4.1.sh
src/: field.cpp  field.hpp  main.cpp  objects.cpp  objects.hpp  remote.cpp  remote.hpp  socket.cpp  socket.hpp  vision.cpp  vision.hpp
src/botlocale/: lidar.cpp  lidar.hpp  mcl.cpp  mcl.hpp
src/bottracking/: bottrack.cpp  bottrack.hpp
src/network/: network.cpp  target.hpp
src/objecttracking/: cubetrack.cpp  cubetrack.hpp
x12/: darknet.cpp  darknet.h  darknet_detector.c
